deploy/dev-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhp
  labels:
    app: fhp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhp

  # Pod template
  template:
    metadata:
      labels:
        app: fhp
    spec:
      containers:
        - name: fhp
          image: foodhub.azurecr.io/fhp:latest
          imagePullPolicy: Always
          workingDir: /var/www
          volumeMounts:
            - name: git-source
              mountPath: /var/www
              subPath: www
            - name: env-file-share
              mountPath: /var/www/var/data
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh","-c", "chown -R www-data:www-data /var/www && composer install && npm install && npm run build"]
      volumes:
        - name: git-source
          emptyDir: {}
        - name: env-file-share
          azureFile:
            secretName: file-share-creds
            shareName: foodhub
            readOnly: false
      imagePullSecrets:
        - name: azure-registry

---
apiVersion: v1
kind: Service
metadata:
  name: fhp
  labels:
    app: fhp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: fhp
  selector:
    app: fhp

---
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: fhp
spec:
  rules:
    - host: panel.dev.foodhub.pl
      http:
        paths:
          - backend:
              serviceName: fhp
              servicePort: 80
